--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,3 +1,7 @@
+html {
+    font-size: 62.5%;
+}
+
 *,
 *::after,
 *::before {
@@ -7,5 +11,7 @@
 }
 
 
-@import './layout.scss';
-@import './header-nav.scss';
+@import "./layout.scss";
+@import "./header-nav.scss";
+@import "./auth/signin.scss";
+@import "./auth/signup.scss";
