--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -10,8 +10,16 @@ html {
     box-sizing: inherit;
 }
 
+body {
+    font-family: "Open Sans";
+    color: #808080;
+}
+
 
 @import "./layout.scss";
 @import "./header-nav.scss";
 @import "./auth/signin.scss";
 @import "./auth/signup.scss";
+@import "./page-title.scss";
+@import "./form-fields.scss";
+@import "./details.scss";
