added signup form and styles

--- a/src/style/details.scss
+++ b/src/style/details.scss
@@ -14,8 +14,13 @@
         grid-row-gap: 10px;
         font-size: 14px;
 
-        &>* {
+        & > * {
             text-decoration: underline;
+        }
+
+        .details__item {
+            text-decoration: none;
         }
     }
 }
+
