--- a/src/style/auth/signup.scss
+++ b/src/style/auth/signup.scss
@@ -2,14 +2,14 @@
     grid-row: content-s/content-e;
     grid-column: s/e;
 
-    // &__page-title {
+    &__page-title {
 
-    // }
+    }
 
     &__form {
         display: grid;
-        grid-template-rows: [name-s] 64px [name-e email-s] 64px [email-e space-s] 35px [space-e password-s] 64px [password-e confirm-s] 64px [confirm-e] minmax(20px, 80px) [line-s] 25px [line-e button-s] 38px [button-e];
-        grid-template-columns: [back-s] 140px [back-e space-s] 40px [space-e create-s] 1fr [create-e] 1fr;
+        grid-template-rows: [name-s] 64px [name-e email-s] 64px [email-e space-s] 35px [space-e password-s] 64px [password-e confirm-s] 64px [confirm-e] minmax(20px, 81px) [line-s] 26px [line-e buttons-s] 38px [buttons-e];
+        grid-template-columns: [back-s] 137px [back-e space-s] 40px [space-e create-s] 1fr [create-e] 1fr;
         grid-row-gap: 15px;
     }
 }
@@ -30,18 +30,19 @@
     &__confirm {
         grid-row: confirm-s/confirm-e;
     }
+
     &__line {
         grid-row: line-s/line-e;
         border-top: 1px solid #ccc;
+        margin-bottom: 24px;
     }
     &__login {
-        grid-row: button-s/button-e;
+        grid-row: buttons-s/buttons-e;
         grid-column: create-s/create-e;
     }
     &__back {
-        grid-row: button-s/button-e;
+        grid-row: buttons-s/buttons-e;
         grid-column: back-s/back-e;
-
     }
     &__details {
         grid-row: 1/-1;
