--- a/src/style/form-fields.scss
+++ b/src/style/form-fields.scss
@@ -1,20 +1,19 @@
 .form-input {
     display: grid;
     grid-gap: 6.5px;
-    
+
     & > * {
         padding-left: 20px;
     }
 
     &__label {
-        font-size: 14px
+        font-size: 14px;
     }
-
     &__input {
         box-sizing: border-box;
         height: 39px;
         width: 426px;
-        border: 1px solid #e6e6e6;
+        border: 1px solid #E6E6E6;
         border-radius: 20px;
         color: #333333;
         font-size: 18px;
@@ -24,9 +23,10 @@
 .form-button {
     &__button {
         height: 38px;
-        width: 240px;
+        width: 243px;
         border-radius: 20px;
         background-color: #00CB79;
+
         font-size: 16px;
         color: white;
 
@@ -36,7 +36,7 @@
     }
 
     &__gray-button {
-        background-color: #999999;
-        width: 140px;
+        background: #999;
+        width: 137px;
     }
 }
