--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,3 +1,5 @@
+
+
 html {
     font-size: 62.5%;
 }
@@ -16,10 +18,11 @@ body {
 }
 
 
-@import "./layout.scss";
-@import "./header-nav.scss";
-@import "./auth/signin.scss";
-@import "./auth/signup.scss";
-@import "./page-title.scss";
-@import "./form-fields.scss";
-@import "./details.scss";
+@import 'layout';
+@import 'headernavbar';
+@import 'auth/signin';
+@import 'auth/signup';
+
+@import 'page-title';
+@import 'form-fields';
+@import 'details';
