--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -27,6 +27,6 @@ body {
 @import 'form-fields';
 @import 'details';
 
+@import 'account/account';
 @import 'account/purchase-history';
 @import 'account/account-information';
-@import 'account/account'
