--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -30,3 +30,5 @@ body {
 @import 'account/account';
 @import 'account/purchase-history';
 @import 'account/account-information';
+
+@import 'shop/shop'
